Syncop account auto generation on initial URS authentication.

--- a/etc/cas/config/cas.properties
+++ b/etc/cas/config/cas.properties
@@ -1,4 +1,4 @@
-cas.server.name=https://auth.maap.xyz
+cas.server.name=https://auth.maap-project.org
 cas.server.prefix=${cas.server.name}/cas
 
 logging.config: file:/etc/cas/config/log4j2.xml
