Updated Apache configuration in Dockerfile. Updated how port configuration is managed and removed disabling of 000-default site as it wasn't affecting anything.

--- a/etc/apache2/sites-available/001-tomcat-cas.conf
+++ b/etc/apache2/sites-available/001-tomcat-cas.conf
@@ -1,4 +1,5 @@
 <VirtualHost *:8001>
+	ServerName localhost
 	ErrorLog ${APACHE_LOG_DIR}/tomcat-cas.error.log
 	CustomLog ${APACHE_LOG_DIR}/tomcat-cas.access.log combined
 
