--- a/.gitignore
+++ b/.gitignore
@@ -19,4 +19,7 @@ bin/
 tmp/
 ./apache-tomcat
 apache-tomcat.zip
-etc/ssl/**
+etc/ssl/certs/**
+etc/ssl/private/**
+!etc/ssl/certs/.gitkeep
+!etc/ssl/private/.gitkeep
