--- a/apache/etc/apache2/sites-available/001-tomcat-cas.conf
+++ b/apache/etc/apache2/sites-available/001-tomcat-cas.conf
@@ -4,8 +4,8 @@
 	ErrorLog ${APACHE_LOG_DIR}/tomcat-cas.error.log
 	CustomLog ${APACHE_LOG_DIR}/tomcat-cas.access.log combined
 
-	ProxyPass /cas ajp://localhost:11009/cas
-	ProxyPassReverse /cas ajp://localhost:11009/cas
+	ProxyPass /cas ajp://cas:11009/cas
+	ProxyPassReverse /cas ajp://cas:11009/cas
 
 	SSLEngine on
 	SSLCertificateFile /etc/ssl/certs/apache-selfsigned.crt
