Updated download path for Tomcat in CAS dockerfile to resolve issue with previous path not working when new versions of Tomcat are released.

--- a/cas/Dockerfile
+++ b/cas/Dockerfile
@@ -12,7 +12,7 @@ RUN groupadd tomcat
 RUN useradd -s /bin/false -g tomcat -d /home/tomcat tomcat
 
 WORKDIR /tmp
-RUN curl -O https://dlcdn.apache.org/tomcat/tomcat-9/v9.0.54/bin/apache-tomcat-9.0.54.tar.gz
+RUN curl -O https://archive.apache.org/dist/tomcat/tomcat-9/v9.0.54/bin/apache-tomcat-9.0.54.tar.gz
 ENV SHA=83430f24d42186ce2ff51eeef2f7a5517048f37d9050c45cac1e3dba8926d61a1f7f5aba122a34a11ac1dbdd3c1f6d98671841047df139394d43751263de57c3
 RUN echo "${SHA} /tmp/apache-tomcat-9.0.54.tar.gz" | sha512sum -c -
 
