Upgrade cas to v6.4.5

--- a/apache/Dockerfile
+++ b/apache/Dockerfile
@@ -2,7 +2,7 @@ FROM ubuntu:18.04
 LABEL maintainer="anil.natha@jpl.nasa.gov"
 LABEL version="0.0.1"
 
-RUN apt-get update && apt-get install -y apache2 && rm -rf /var/lib/apt/lists/* && apt-get clean
+RUN apt-get update && apt-get install -y apache2 vim && rm -rf /var/lib/apt/lists/* && apt-get clean
 
 ###########################################################################
 # Copy certificates
@@ -15,9 +15,11 @@ COPY ./etc/ssl/private/* /etc/ssl/private
 
 RUN a2enmod proxy_ajp
 RUN a2enmod proxy_http
+RUN a2enmod rewrite
 RUN a2enmod ssl
 
 COPY ./etc/apache2/sites-available/001-tomcat-cas.conf /etc/apache2/sites-available/
+RUN a2dissite 000-default 
 RUN a2ensite 001-tomcat-cas
 
 ###########################################################################
