--- a/cas/Dockerfile
+++ b/cas/Dockerfile
@@ -2,7 +2,7 @@ FROM ubuntu:18.04
 LABEL maintainer="anil.natha@jpl.nasa.gov"
 LABEL version="0.0.1"
 
-RUN apt-get update && apt-get install -y default-jdk supervisor curl && rm -rf /var/lib/apt/lists/* && apt-get clean
+RUN apt-get update && apt-get install -y default-jdk supervisor curl vim && rm -rf /var/lib/apt/lists/* && apt-get clean
 
 ###########################################################################
 ###########################################################################
@@ -33,7 +33,15 @@ RUN chown -R tomcat webapps/ work temp/ logs
 
 WORKDIR /tmp/maap-auth-cas
 COPY . ./
-RUN ./gradlew clean build
+
+RUN mkdir -p ~/.gradle \
+    && echo "org.gradle.daemon=false" >> ~/.gradle/gradle.properties \
+    && echo "org.gradle.configureondemand=true" >> ~/.gradle/gradle.properties \
+    && chmod 750 ./gradlew \
+    && ./gradlew --version;
+
+RUN ./gradlew clean build --parallel --no-daemon
+RUN ./gradlew createKeystore
 RUN cp ./build/libs/cas.war /opt/tomcat/webapps/
 RUN chown tomcat:tomcat /opt/tomcat/webapps/cas.war
 RUN chmod 750 /opt/tomcat/webapps/cas.war
@@ -43,9 +51,14 @@ RUN chmod 750 /opt/tomcat/webapps/cas.war
 # Set up CAS configuration settings
 
 WORKDIR /etc/cas/config
-COPY ./etc/cas/config/* /etc/cas/config
-
+COPY ./etc/cas/config/* /etc/cas/config/
 RUN mkdir /etc/cas/services-repo
+WORKDIR /etc/cas/services-repo
+COPY ./etc/cas/services-repo/* /etc/cas/services-repo/
+WORKDIR /etc/cas
+COPY ./etc/cas/*.jwks /etc/cas/
+COPY ./etc/cas/*.key /etc/cas/
+COPY ./etc/cas/thekeystore /etc/cas/
 
 ###########################################################################
 ###########################################################################
