--- a/apache/etc/apache2/sites-available/001-tomcat-cas.conf
+++ b/apache/etc/apache2/sites-available/001-tomcat-cas.conf
@@ -1,14 +1,18 @@
-<VirtualHost *:443>
+<VirtualHost *:80>
 
 	ServerName localhost
 	ErrorLog ${APACHE_LOG_DIR}/tomcat-cas.error.log
 	CustomLog ${APACHE_LOG_DIR}/tomcat-cas.access.log combined
 
+	RewriteEngine On
+    RewriteCond %{QUERY_STRING} ^(.*)client_name=(.+)\?code=(.*)$
+	RewriteRule /cas/login /cas/login?%1client_name=%2&code=%3 [R=302,NE,L]
+
 	ProxyPass /cas ajp://cas:11009/cas
 	ProxyPassReverse /cas ajp://cas:11009/cas
 
-	SSLEngine on
-	SSLCertificateFile /etc/ssl/certs/apache-selfsigned.crt
-	SSLCertificateKeyFile /etc/ssl/private/apache-selfsigned.key
+	# SSLEngine on
+	# SSLCertificateFile /etc/ssl/certs/apache-selfsigned.crt
+	# SSLCertificateKeyFile /etc/ssl/private/apache-selfsigned.key
 
 </VirtualHost>
