--- a/cas/gradle.properties
+++ b/cas/gradle.properties
@@ -1,29 +1,62 @@
-# Versions
-cas.version=6.0.4
-springBootVersion=2.1.5.RELEASE
 
-# Use -jetty, -undertow to other containers
-# Or blank if you want to deploy to an external container
-appServer=-tomcat
-executable=false
+# The version of this overlay project
+version=6.4.5
 
-gradleVersion=5.0
-tomcatVersion=9.0.14
+#CAS server version
+cas.version=6.4.5
+springBootVersion=2.5.7
 
 group=org.apereo.cas
+artifactId=cas-overlay
 sourceCompatibility=11
 targetCompatibility=11
 
-jibVersion=0.10.0
-pac4jVersion=3.6.1
+pac4jVersion=5.2.1
+persondirVersion=2.0.12
 
-# Location of the downloaded CAS shell JAR
+gradleFreeFairPluginVersion=6.3.0
+gradleDependencyManagementPluginVersion=1.0.11.RELEASE
+
+# Used to build docker images
+jibVersion=3.2.0
+
+# Specify the coordinates of the container image to build via jib
+containerImageOrg=apereo
+containerImageName=cas
+
+baseDockerImage=adoptopenjdk/openjdk11:alpine-jre
+allowInsecureRegistries=false
+
+# Include launch script for executable WAR artifact
+# Setting this to true allows the final web application
+# to be fully executable on its own
+executable=false
+
+# Use -tomcat, -jetty, -undertow for deployment to other embedded containers
+# if the overlay application supports or provides the chosen type.
+# You should set this to blank if you want to deploy to an external container.
+# and want to set up, download and manage the container (i.e. Apache Tomcat) yourself.
+appServer=-tomcat
+
+group=org.apereo.cas
+
+# Settings to generate keystore
+# used by the build to assist with creating
+# self-signed certificates for https endpoints
+certDir=/etc/cas
+serverKeystore=thekeystore
+exportedServerCert=cas.crt
+storeType=PKCS12
+
+# Location of the downloaded CAS Shell JAR
 shellDir=build/libs
 ivyVersion=2.4.0
-gradleDownloadTaskVersion=3.4.3
-gradleLogVersion=0.1.0
+gradleDownloadTaskVersion=4.1.1
 
-# use without "-slim" in tag name if you want tools like jstack, adds about 100MB to image size
-# (https://hub.docker.com/r/adoptopenjdk/openjdk11/tags/)
-baseDockerImage=adoptopenjdk/openjdk11:jdk11-alpine-nightly-slim
+# Control the version of the embedded Apache Tomcat server
+tomcatVersion=9.0.54
 
+# Include private repository
+# override these in user properties or pass in values from env on command line
+privateRepoUrl=
+privateRepoUsername=
