--- a/cas/etc/cas/config/cas.properties
+++ b/cas/etc/cas/config/cas.properties
@@ -1,4 +1,6 @@
-cas.server.name=https://auth.dit.maap-project.org
+cas.server.name=casServerName
+cas.delegated.urs.name=casDelegatedUrsName
+cas.delegated.esa.name=https://iam.val.esa-maap.org/.well-known/openid-configuration
 cas.server.prefix=${cas.server.name}/cas
 
 cas.authn.accept.users=
@@ -18,12 +20,12 @@ user.details.file.location=file:/etc/cas/config/user-details.properties
 cas.authn.oauth.userProfileViewType=FLAT
 cas.webflow.auto-configuration.enabled=true
 
-cas.authn.pac4j.oauth2[0].auth-url=https://uat.urs.earthdata.nasa.gov/oauth/authorize
-cas.authn.pac4j.oauth2[0].token-url=https://uat.urs.earthdata.nasa.gov/oauth/token
-cas.authn.pac4j.oauth2[0].callback-url=${cas.server.prefix}/login
-cas.authn.pac4j.oauth2[0].profile-url=https://uat.urs.earthdata.nasa.gov
-cas.authn.pac4j.oauth2[0].profileVerb=GET
 cas.authn.pac4j.oauth2[0].client-name=maapauth
+cas.authn.pac4j.oauth2[0].auth-url=${cas.delegated.urs.name}/oauth/authorize
+cas.authn.pac4j.oauth2[0].token-url=${cas.delegated.urs.name}/oauth/token
+cas.authn.pac4j.oauth2[0].callback-url=${cas.server.prefix}/login
+cas.authn.pac4j.oauth2[0].profile-url=${cas.delegated.urs.name}
+cas.authn.pac4j.oauth2[0].profileVerb=GET
 cas.authn.pac4j.oauth2[0].callback-url-type=QUERY_PARAMETER
 cas.authn.pac4j.oauth2[0].custom-params.urs4_uid=maapauth
 cas.authn.pac4j.oauth2[0].principal-attribute-id=email_address
@@ -36,9 +38,19 @@ cas.authn.pac4j.oauth2[0].profile-attrs.preferred_username=uid
 cas.authn.pac4j.oauth2[0].profile-attrs.syncope_url=${cas.authn.syncope.url.rest}
 cas.authn.pac4j.oauth2[0].profile-attrs.gitlab_url=https://repo.dit.maap-project.org/api/v4
 
+cas.authn.pac4j.oidc[0].generic.clientName=ESA
+cas.authn.pac4j.oidc[0].generic.discoveryUri=${cas.delegated.esa.name}
 cas.authn.pac4j.oidc[0].generic.autoRedirect=false
 cas.authn.pac4j.oidc[0].generic.preferredJwsAlgorithm=RS256
 cas.authn.pac4j.oidc[0].generic.principalAttributeId=email
+cas.authn.pac4j.oidc[0].generic.responseType=code
+cas.authn.pac4j.oidc[0].generic.callback-url-type=QUERY_PARAMETER
+
+cas.authn.pac4j.oidc[1].generic.clientName=ESA-API
+cas.authn.pac4j.oidc[1].generic.autoRedirect=false
+cas.authn.pac4j.oidc[1].generic.discoveryUri=${cas.delegated.esa.name}
+cas.authn.pac4j.oidc[1].generic.preferredJwsAlgorithm=RS256
+cas.authn.pac4j.oidc[1].generic.principalAttributeId=email
 
 cas.personDirectory.useExistingPrincipalId=true
 
