--- a/docker-compose-ci.yml
+++ b/docker-compose-ci.yml
@@ -46,7 +46,7 @@ services:
     build:
       dockerfile: Dockerfile
       context: ./cas
-    image: 'mas.dit.maap-project.org/root/auth-ci/maap-auth-cas'
+    image: 'casDockerImage'
     volumes:
       - cas-logs:/tmp/logs
     ports:
