--- a/cas/etc/cas/config/cas.properties
+++ b/cas/etc/cas/config/cas.properties
@@ -1,5 +1,5 @@
-cas.server.name=casServerName
-cas.delegated.urs.name=casDelegatedUrsName
+cas.server.name=https://auth.maap-environment.maap-project.org
+cas.delegated.urs.name=https://cas-delegated-urs-name
 cas.delegated.esa.name=https://iam.val.esa-maap.org/.well-known/openid-configuration
 cas.server.prefix=${cas.server.name}/cas
 
@@ -36,7 +36,7 @@ cas.authn.pac4j.oauth2[0].profile-attrs.affiliation=affiliation
 cas.authn.pac4j.oauth2[0].profile-attrs.organization=organization
 cas.authn.pac4j.oauth2[0].profile-attrs.preferred_username=uid
 cas.authn.pac4j.oauth2[0].profile-attrs.syncope_url=${cas.authn.syncope.url.rest}
-cas.authn.pac4j.oauth2[0].profile-attrs.gitlab_url=https://repo.dit.maap-project.org/api/v4
+cas.authn.pac4j.oauth2[0].profile-attrs.gitlab_url=https://repo.maap-environment.maap-project.org/api/v4
 
 cas.authn.pac4j.oidc[0].generic.clientName=ESA
 cas.authn.pac4j.oidc[0].generic.discoveryUri=${cas.delegated.esa.name}
