--- a/cas/gradle.properties
+++ b/cas/gradle.properties
@@ -1,17 +1,18 @@
 
 # The version of this overlay project
-version=6.4.5
+version=6.4.6.2
 
 #CAS server version
-cas.version=6.4.5
-springBootVersion=2.5.12
+cas.version=6.4.6.2
+springBootVersion=2.5.7
 
 group=org.apereo.cas
 artifactId=cas-overlay
 sourceCompatibility=11
 targetCompatibility=11
 
-pac4jVersion=5.2.1
+pac4jVersion=5.4.1
+scribejavaVersion=8.3.1
 persondirVersion=2.0.12
 
 gradleFreeFairPluginVersion=6.3.0
