--- a/cas/etc/cas/config/cas.properties
+++ b/cas/etc/cas/config/cas.properties
@@ -8,8 +8,12 @@ cas.authn.syncope.domain=Master
 cas.authn.syncope.url=${cas.server.name}/syncope
 cas.authn.syncope.url.rest=${cas.authn.syncope.url}/rest
 
+cas.authn.attribute-repository.groovy[0].location=file:/etc/cas/attributes.groovy
+cas.authn.attribute-repository.groovy[0].case-insensitive=false
+cas.authn.attribute-repository.groovy[0].order=0
+
 cas.authn.attributeRepository.rest[0].method=GET
-cas.authn.attributeRepository.rest[0].order=0
+cas.authn.attributeRepository.rest[0].order=1
 cas.authn.attributeRepository.rest[0].caseInsensitive=false
 cas.authn.attributeRepository.rest[0].url=${cas.authn.syncope.url.rest}
 
