--- a/cas/etc/cas/config/cas.properties
+++ b/cas/etc/cas/config/cas.properties
@@ -39,7 +39,7 @@ cas.authn.pac4j.oauth2[0].profile-attrs.family_name=last_name
 cas.authn.pac4j.oauth2[0].profile-attrs.affiliation=affiliation
 cas.authn.pac4j.oauth2[0].profile-attrs.organization=organization
 cas.authn.pac4j.oauth2[0].profile-attrs.preferred_username=uid
-cas.authn.pac4j.oauth2[0].profile-attrs.syncope_url=${cas.authn.syncope.url.rest}
+cas.authn.pac4j.oauth2[0].profile-attrs.maap_api_url=https://api.maap-environment.maap-project.org/api
 cas.authn.pac4j.oauth2[0].profile-attrs.gitlab_url=https://repo.maap-environment.maap-project.org/api/v4
 
 cas.authn.pac4j.oidc[0].generic.clientName=ESA
