--- a/cas/etc/cas/config/cas.properties
+++ b/cas/etc/cas/config/cas.properties
@@ -22,7 +22,7 @@ cas.serviceRegistry.json.location=file:/etc/cas/services-repo
 user.details.file.location=file:/etc/cas/config/user-details.properties
 
 cas.authn.oidc.issuer=${cas.server.name}/cas/oidc
-cas.authn.oidc.jwksFile=/WEB-INF/classes/jwks/keystore.jwks
+cas.authn.oidc.jwks.jwks-file=file:/etc/cas/config/oidc-keystore.jwks
 
 cas.authn.oauth.userProfileViewType=FLAT
 cas.webflow.auto-configuration.enabled=true
