Additional ESA profile attributes

--- a/cas/etc/cas/config/cas.properties
+++ b/cas/etc/cas/config/cas.properties
@@ -4,10 +4,18 @@ cas.delegated.esa.name=https://iam.val.esa-maap.org/.well-known/openid-configura
 cas.server.prefix=${cas.server.name}/cas
 
 cas.authn.accept.users=
+cas.authn.syncope.domain=Master
+cas.authn.syncope.url=${cas.server.name}/syncope
+cas.authn.syncope.url.rest=${cas.authn.syncope.url}/rest
 
 cas.authn.attribute-repository.groovy[0].location=file:/etc/cas/attributes.groovy
 cas.authn.attribute-repository.groovy[0].case-insensitive=false
 cas.authn.attribute-repository.groovy[0].order=0
+
+cas.authn.attributeRepository.rest[0].method=GET
+cas.authn.attributeRepository.rest[0].order=1
+cas.authn.attributeRepository.rest[0].caseInsensitive=false
+cas.authn.attributeRepository.rest[0].url=${cas.authn.syncope.url.rest}
 
 logging.config=file:/etc/cas/config/log4j2.xml
 cas.serviceRegistry.json.location=file:/etc/cas/services-repo
@@ -28,8 +36,10 @@ cas.authn.pac4j.oauth2[0].profileVerb=GET
 cas.authn.pac4j.oauth2[0].callback-url-type=QUERY_PARAMETER
 cas.authn.pac4j.oauth2[0].custom-params.urs4_uid=maapauth
 cas.authn.pac4j.oauth2[0].principal-attribute-id=email_address
+cas.authn.pac4j.oauth2[0].profile-attrs.email=email_address
 cas.authn.pac4j.oauth2[0].profile-attrs.username=email_address
 cas.authn.pac4j.oauth2[0].profile-attrs.given_name=first_name
+cas.authn.pac4j.oauth2[0].profile-attrs.name=first_name
 cas.authn.pac4j.oauth2[0].profile-attrs.family_name=last_name
 cas.authn.pac4j.oauth2[0].profile-attrs.affiliation=affiliation
 cas.authn.pac4j.oauth2[0].profile-attrs.organization=organization
