--- a/cas/etc/cas/config/cas.properties
+++ b/cas/etc/cas/config/cas.properties
@@ -1,6 +1,6 @@
 cas.server.name=https://auth.maap-environment.maap-project.org
 cas.delegated.urs.name=https://cas-delegated-urs-name
-cas.delegated.esa.name=https://iam.val.esa-maap.org/.well-known/openid-configuration
+cas.delegated.esa.name=https://auth.int.esa-maap.org/realms/maap/.well-known/openid-configuration
 cas.server.prefix=${cas.server.name}/cas
 
 cas.authn.accept.users=
