--- a/cas/etc/cas/config/cas.properties
+++ b/cas/etc/cas/config/cas.properties
@@ -1,4 +1,4 @@
-cas.server.name=https://auth.maap-environment.maap-project.org
+cas.server.name=https://auth.maap-project.org
 cas.delegated.urs.name=https://cas-delegated-urs-name
 cas.delegated.esa.name=https://auth.val.esa-maap.org/realms/maap/.well-known/openid-configuration
 cas.server.prefix=${cas.server.name}/cas
@@ -44,7 +44,7 @@ cas.authn.pac4j.oauth2[0].profile-attrs.family_name=last_name
 cas.authn.pac4j.oauth2[0].profile-attrs.affiliation=affiliation
 cas.authn.pac4j.oauth2[0].profile-attrs.organization=organization
 cas.authn.pac4j.oauth2[0].profile-attrs.preferred_username=uid
-cas.authn.pac4j.oauth2[0].profile-attrs.maap_api_url=https://api.maap-environment.maap-project.org/api
+cas.authn.pac4j.oauth2[0].profile-attrs.maap_api_url=https://api.maap-project.org/api
 
 cas.authn.pac4j.oidc[0].generic.clientName=ESA
 cas.authn.pac4j.oidc[0].generic.discoveryUri=${cas.delegated.esa.name}
