cas.delegated.urs.name

--- a/cas/etc/cas/config/cas.properties
+++ b/cas/etc/cas/config/cas.properties
@@ -1,5 +1,5 @@
 cas.server.name=https://auth.dit.maap-project.org
-cas.delegated.urs.name=https://cas-delegated-urs-name
+cas.delegated.urs.name=https://uat.urs.earthdata.nasa.gov
 cas.delegated.esa.name=https://auth.val.esa-maap.org/realms/maap/.well-known/openid-configuration
 cas.server.prefix=${cas.server.name}/cas
 
